--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "^1.3.0",
     "bootstrap-sass-official": "^3.2.0",
-    "angular-cookies": "^1.3.0"
+    "angular-cookies": "~1.3.14",
+    "angular-animate": "~1.3.14"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
